<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/dialog_bg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/change_reset"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/confirm_reset"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reset_dialog_cancel"
            android:background="@drawable/dialog_cancel_bt_bg_selector"
            android:text="@string/cancel"
            android:textColor="#0000ff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/reset_dialog_sure"
            android:background="@drawable/dialog_sure_bt_bg_selector"
            android:text="@string/sure"
            android:textColor="#0000ff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>