<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <Button
            android:id="@+id/activity_settings_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/settings_back"
            android:onClick="click"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_weight="3"
                android:src="@drawable/settings_back"
                android:visibility="gone"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txt_wifiName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/change_wifi_name"
                    android:inputType="textVisiblePassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txt_wifipassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/change_wifi_psw"
                    android:inputType="textVisiblePassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txt_wifi_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/change_wifi_port"
                    android:inputType="textEmailAddress"
                    android:maxLength="4"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/settings_bt_bg_selector"
                android:onClick="click"
                android:text="@string/sure"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:paddingBottom="3dp">

                <!--            <Button
                    android:id="@+id/activity_settings_getChannel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/settings_bt_bg_selector"
                    android:onClick="click"
                    android:text="@string/get_wifi_channel"
                    android:textSize="10sp"/>-->

                <Button
                    android:id="@+id/activity_settings_changeChannel"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:background="@drawable/settings_bt_bg_selector"
                    android:onClick="click"
                    android:text="@string/change_wifi_channel"
                    android:textSize="13sp"/>

                <Button
                    android:id="@+id/activity_settings_reset"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/settings_bt_bg_selector"
                    android:onClick="click"
                    android:text="@string/change_reset"
                    android:textSize="13sp"/>
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="?attr/colorControlHighlight"
                android:padding="7dp"
                android:text="@string/change_wifi_sound"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="18sp"/>

            <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
                             android:id="@+id/txt_check_wav"
                             android:layout_width="match_parent"
                             android:layout_height="?android:attr/listPreferredItemHeightSmall"
                             android:background="@drawable/checkbox_selector"
                             android:checkMark="?android:attr/listChoiceIndicatorSingle"
                             android:checked="false"
                             android:gravity="center_vertical"
                             android:onClick="click"
                             android:paddingEnd="5dp"
                             android:paddingStart="5dp"
                             android:text="WAV"
                             android:textAppearance="?android:attr/textAppearanceListItemSmall"
                             android:textColor="?android:attr/textColorHint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"/>

            <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
                             android:id="@+id/txt_check_mp3"
                             android:layout_width="match_parent"
                             android:layout_height="?android:attr/listPreferredItemHeightSmall"
                             android:background="@drawable/checkbox_selector"
                             android:checkMark="?android:attr/listChoiceIndicatorSingle"
                             android:gravity="center_vertical"

                             android:onClick="click"
                             android:paddingEnd="5dp"
                             android:paddingStart="5dp"
                             android:text="MP3"
                             android:textAppearance="?android:attr/textAppearanceListItemSmall"
                             android:textColor="?android:attr/textColorHint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="?attr/colorControlHighlight"
                android:padding="5dp"
                android:text="串口数据"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txt_sendDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="串口发送"
                    android:inputType="textVisiblePassword"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chk_send_hex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="  是否HEX发送"
                android:textColor="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="串口接收数据"/>

                <CheckBox
                    android:id="@+id/chk_recice_hex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="  是否HEX显示"
                    android:textColor="@color/gray"/>
            </LinearLayout>

            <EditText
                android:id="@+id/chk_recice_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_edittext"
                android:gravity="top"
                android:hint="串口接收数据"
                android:minLines="5"

              />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="发送"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
